[gd_scene load_steps=2 format=2]

[ext_resource path="res://SpawnMenu.gd" type="Script" id=1]

[node name="SpawnMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 720, 264 )
color = Color( 0.117647, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitPurchaseGrid" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -31.0
margin_right = 95.0
margin_bottom = 31.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UnitPurchaseGrid"]
margin_right = 42.0
margin_bottom = 14.0
text = "Name"

[node name="CountLabel" type="Label" parent="UnitPurchaseGrid"]
margin_left = 46.0
margin_right = 55.0
margin_bottom = 14.0
text = "#"

[node name="BuyLabel" type="Label" parent="UnitPurchaseGrid"]
margin_left = 59.0
margin_right = 158.0
margin_bottom = 14.0
text = "Buy"

[node name="CostLabel" type="Label" parent="UnitPurchaseGrid"]
margin_left = 162.0
margin_right = 190.0
margin_bottom = 14.0
text = "Cost"

[node name="GoblinName" type="Label" parent="UnitPurchaseGrid"]
margin_top = 21.0
margin_right = 42.0
margin_bottom = 35.0
text = "Goblin"

[node name="GoblinCount" type="Label" parent="UnitPurchaseGrid"]
margin_left = 46.0
margin_top = 21.0
margin_right = 55.0
margin_bottom = 35.0
text = "0"

[node name="GoblinPurchaseButton" type="Button" parent="UnitPurchaseGrid"]
margin_left = 59.0
margin_top = 18.0
margin_right = 158.0
margin_bottom = 38.0
text = "Create Goblin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoblinCost" type="Label" parent="UnitPurchaseGrid"]
margin_left = 162.0
margin_top = 21.0
margin_right = 190.0
margin_bottom = 35.0
text = "%s"

[node name="OrcName" type="Label" parent="UnitPurchaseGrid"]
margin_top = 45.0
margin_right = 42.0
margin_bottom = 59.0
text = "Orc"

[node name="OrcCount" type="Label" parent="UnitPurchaseGrid"]
margin_left = 46.0
margin_top = 45.0
margin_right = 55.0
margin_bottom = 59.0
text = "0"

[node name="PurchaseButton" type="Button" parent="UnitPurchaseGrid"]
margin_left = 59.0
margin_top = 42.0
margin_right = 158.0
margin_bottom = 62.0
text = "Create Orc"

[node name="OrcCost" type="Label" parent="UnitPurchaseGrid"]
margin_left = 162.0
margin_top = 45.0
margin_right = 190.0
margin_bottom = 59.0
text = "%s"

[node name="ValueLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_top = 16.0
margin_right = -72.0
margin_bottom = 30.0
text = "Value:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 30.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="pressed" from="UnitPurchaseGrid/GoblinPurchaseButton" to="." method="_on_GoblinPurchaseButton_pressed"]
[connection signal="pressed" from="UnitPurchaseGrid/PurchaseButton" to="." method="_on_OrcPurchaseButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
